--- a/src/index.html
+++ b/src/index.html
@@ -40,9 +40,10 @@
 
 <body>
     <div id="navbar">
-        <img id="logo" alt="" Joysha Logo"
-            src="https://imgs.search.brave.com/8xxEK4wcvAlolsIXJp40OAO3wqN8PJ7LdlT1GtuWAW0/rs:fit:860:0:0:0/g:ce/aHR0cHM6Ly9rb21h/dHN1LnN0eWxlbGFi/cy5jbG91ZC9hcGkv/cHVibGljL2NvbnRl/bnQvYTc1ZGFiMzc0/MTIyNGE0MWE2ZmU4/OTRhYmRkMGRkZmM_/dj0wYjgyMDFjMCZo/PTIwMCZ3PTMwNSZs/YT1lbg"
-            height="30" />
+        <img id="logo" alt="Jovian Logo" src="https://imgs.search.brave.com/8xxEK4wcvAlolsIXJp40OAO3wqN8PJ7LdlT1GtuWAW0/rs:fit:860:0:0:0/g:ce/aHR0cHM6Ly9rb21h/dHN1LnN0eWxlbGFi/cy5jbG91ZC9hcGkv/cHVibGljL2NvbnRl/bnQvYTc1ZGFiMzc0/MTIyNGE0MWE2ZmU4/OTRhYmRkMGRkZmM_/dj0wYjgyMDFjMCZo/PTIwMCZ3PTMwNSZs/YT1lbg" height="30">
+        <img id="logo-with-text" alt="" Joysha Logo with Text"
+            src="joysha.png"
+            height="80" />        
     </div>
     <img id="banner" src="joy.jpeg" alt="Banner" height="260" width="686">
 
@@ -65,7 +66,7 @@
             </p>
         </div>
         <div id="team">
-            <img id="k" src="team.jpeg" alt="Team">
+            <img id="k" src="team.jpeg" height="100" alt="Team">
 
         </div>
     </div>
