--- a/src/index.html
+++ b/src/index.html
@@ -45,7 +45,7 @@
             src="joysha.png"
             height="80" />        
     </div>
-    <img id="banner" src="joy.jpeg" alt="Banner" height="260" width="686">
+    <img id="banner" src="joy.jpeg" alt="Banner" >
 
     <h1>
         About Joysha
@@ -66,12 +66,39 @@
             </p>
         </div>
         <div id="team">
-            <img id="k" src="team.jpeg" height="100" alt="Team">
+            <img id="k" src="team.jpeg" alt="Team">
 
         </div>
     </div>
     <h2>Job Opportunities</h2>
     <div id="jobs">
+        <div id="jobs-list">
+            <div class="job">
+                <div class="job-title">Frontend Developer</div>
+                <div class="job-detail">Bengaluru, India</div>
+                <div class="job-detail">₹ 12,00,000</div>
+                <div class="job-detail">Posted Mar 3, 2025</div>
+            </div >
+            <div class="job">
+                <div class="job-title">Full Stack Developer</div>
+                <div class="job-detail">New Delhi, India</div>
+                <div class="job-detail">₹ 15,00,000</div>
+                <div class="job-detail">Posted Feb 1, 2025</div>
+            </div>
+            <div class="job">
+                <div class="job-title">Data Scientist</div>
+                <div class="job-detail">San Francisco, USA</div>
+                <div class="job-detail">$175,000</div>
+                <div class="job-detail">Posted Dec 22, 2025</div>
+            </div>
+            <div class="job">
+                <div class="job-title">ML Engineer</div>
+                <div class="job-detail">Remote</div>
+                <div class="job-detail">$80,000</div>
+                <div class="job-detail">Posted Sep 19, 2025</div>
+            </div>
+        </div>
+
         <table id="jobs-table">
             <tr class="jobs-header-row">
                 <th rowspan="2">Job Title</th>
